# gaze-tracker-app

./: README.md  package.json  pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/gaze_tracker/: data_processor.py  gaze_estimator.py  mapper.py  tracker.py  video_processor.py
backend/scripts/: analyze_calibration.py  gaze.py  process_calibration.py  process_gaze.py  process_recording.py  train_mapper.py
electron-app/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.web.json
electron-app/src/main/: ipcHandlers.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/src/: App.tsx  env.d.ts
electron-app/src/renderer/src/screens/: Calibration.tsx  GazeRecorder.tsx
src/main/: index.ts  ipcHandlers.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: Calibration.tsx  GazeRecorder.tsx  Nav.tsx
src/renderer/src/screens/: GazeRecorder.tsx
src/renderer/src/types/: electron-api.d.ts
