[project]
name = "gaze-tracker-app-backend"
version = "0.1.0"
description = "Backend for gaze tracker app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
